--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>Neale Enjoys - <span class="txt-type" data-wait="3000" data-words='["Wine", "Disney", "Orlando"]'></span></h1>
+        <h1>Neale Enjoys - <span class="txt-type" data-wait="3000" data-words='["Wine", "Disney", "Orlando", "Reading", "Gaming", "Gardening"]'></span></h1>
         <h2>Welcome to my website</h2>
 
     </div>
